minor css changes

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -96,7 +96,7 @@
         frameBorder="0">
 </iframe>
   
-  <div class="col-sm- text-left"> 
+  <div class="col-sm-12" style = "margin-bottom: 130px;"> 
       <p> Add more analysis and any visualization you want here</p>
       <hr>
       <p>Lorem ipsum...</p>
