--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -23,9 +23,11 @@
       text-align: center;
     }
     footer {
+      position: fixed;
       right: 0;
       left: 0;
       bottom: 0;
+      margin-top: 50px;
       padding-top: 20px;
       padding-bottom: 20px;
       background-color: #f8f8f8;;
@@ -85,10 +87,12 @@
   <h3 style="color: white;">Blockbuster - Movie Analysis Project</ >
 </div>
 
-<div class="container">
-</div>
 
-  <p> Add dataset description and initial intro here</p>
+  <div class="col-sm-12" style = "margin-bottom: 130px;">
+    <p> Add dataset description and initial intro here</p>
+      <hr>
+      <p>Lorem ipsum...</p>
+    </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
