Updating Website Introduction Page
Updated the website introduction page, added my name

--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -89,14 +89,22 @@
 
 
   <div class="col-sm-12" style = "margin-bottom: 130px;">
-    <p> Add dataset description and initial intro here</p>
+    <p> What if <b>you</b> could predict the next big blockbuster?</p>
       <hr>
-      <p>Lorem ipsum...</p>
+      <p>The movie industry is one of the most profitable industries worldwide.  Billions
+      of dollars go into the box office yearly.  Individual movies can also make over 
+      one billion dollars.  We decided to explore what makes a movie popular.  What 
+      can a movie do in order to make these billions of dollars?  In order to do this, we
+      analyzed a dataset called "IMDB 5000 Movie Dataset" from data.world.  This 
+      dataset over 5000 movie titles spanning across 100 years and 66 countries, with 28 
+      distinct variables, 2399 director names and additional information on the 
+      main actors/actresses.  Click through all the tabs to see our analysis of the 
+      data set and to build your own blockbuster!</p>
     </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, </span>
+  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan </span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href=https://github.com/hakhuyen1997/Blockbuster-DS3001-Project> Github </a>
