--- a/templates/result.html
+++ b/templates/result.html
@@ -92,7 +92,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, </span>
+  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan</span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href="https://github.com/hakhuyen1997/Blockbuster-DS3001-Project"> Github </a>
