interactive website yay

--- a/templates/result.html
+++ b/templates/result.html
@@ -86,8 +86,13 @@
   <h3 style="color: white;">Blockbuster - Movie Analysis Project</ >
 </div>
 
-<div class="container">
-</div>
+    <div class="col-sm-12" style = "margin-bottom: 130px;">
+      <p>
+      {{answer}}
+      </p>
+      <hr>
+    </div>
+
 
 
 <!-- Footer -->
