--- a/templates/predict.html
+++ b/templates/predict.html
@@ -15,7 +15,6 @@
     body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
-      color: #f5f6f7;
     }
     p{
       color: black;
@@ -89,6 +88,43 @@
 <div class="container">
 </div>
 
+  <h2 style = "text-align: center;">Enter the information about the movie you want to predict</h2>
+
+<div class="container" style="margin-bottom: 130px;">
+  <form action="{{ url_for('upload') }}" method=post>
+    <div class="form-group row">
+      <label class="col-sm-4 col-form-label">Budget</label>
+      <div class="col-sm-8">
+        <input type="number" name="budget" class="form-control" placeholder="Budget...">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4 col-form-label">Director Facebook Likes</label>
+      <div class="col-sm-8">
+        <input type="number" name="dfl" class="form-control" placeholder="Director Facebook Likes...">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4 col-form-label">Main Actor Facebook Likes 1</label>
+      <div class="col-sm-8">
+        <input type="number" name="afl1" class="form-control" placeholder="Main Actor Facebook Likes (1)...">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4 col-form-label">Main Actor Facebook Likes 2</label>
+      <div class="col-sm-8">
+        <input type="number" name="afl2" class="form-control" placeholder="Main Actor Facebook Likes (2)...">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4 col-form-label">Duration</label>
+      <div class="col-sm-8">
+        <input type="number" name="duration" class="form-control" placeholder="Duration...">
+      </div>
+    </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
