adding info about datset

--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -101,6 +101,18 @@
       main actors/actresses.  Click through all the tabs to see our analysis of the 
       data set and to build your own blockbuster!</p>
     </div>
+      <div class="col-sm-12" style = "margin-bottom: 130px;">
+    <p> About the Data set</p>
+      <hr>
+      <p> For this project we looked at iMDB 5000 dataset.</p>
+      <p> Below are the missing values per attribute.</p>
+
+      <img src="missing_value.png" alt="bro" style="width:50%;height:60%;align-self: center;">
+      <p>Basic correlation</p>
+      <img src="pearson_heatmap.png" alt="bro" style="width:50%;height:60%;align-self: center;">
+    </div>
+
+
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
