Centered images on intro page

--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -98,8 +98,7 @@
       analyzed a dataset called "IMDB 5000 Movie Dataset" from data.world.  This 
       dataset over 5000 movie titles spanning across 100 years and 66 countries, with 28 
       distinct variables, 2399 director names and additional information on the 
-      main actors/actresses.  Click through all the tabs to see our analysis of the 
-      data set and to build your own blockbuster!</p>
+      main actors/actresses.</p>
     </div>
       <div class="col-sm-12" style = "margin-bottom: 130px;">
     <p> About the Data set</p>
@@ -107,9 +106,13 @@
       <p> For this project we looked at iMDB 5000 dataset.</p>
       <p> Below are the missing values per attribute.</p>
 
-      <img src="missing_value.png" alt="bro" style="width:50%;height:60%;align-self: center;">
+      <p style="text-align:center;">
+          <img src="missing_value.png" alt="bro" style="width:50%;height:60%;">
+      </p>
       <p>Basic correlation</p>
-      <img src="pearson_heatmap.png" alt="bro" style="width:50%;height:60%;align-self: center;">
+      <p style="text-align:center;">
+          <img src="pearson_heatmap.png" alt="bro" style="width:50%;height:60%;">
+      </p>
     </div>
 
 
