Consistency/Readability Updates

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -88,7 +88,8 @@
 <div class="container">
 </div>
 
-  <h2 style = "text-align: center;">Enter the information about the movie you want to predict</h2>
+  <h2 style = "text-align: center;">Enter the information about the movie you want to predict.</h2>
+  
 
 <div class="container" style="margin-bottom: 130px;">
   <form action="{{ url_for('upload') }}" method=post>
