--- a/templates/result.html
+++ b/templates/result.html
@@ -87,6 +87,7 @@
 </div>
 
     <div class="col-sm-12" style = "margin-bottom: 130px;">
+      <p> Is your movie a blockbuster? </p>
       <p>
       {{answer}}
       </p>
