--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -95,7 +95,7 @@
       of dollars go into the box office yearly.  Individual movies can also make over 
       one billion dollars.  We decided to explore what makes a movie popular.  What 
       can a movie do in order to make these billions of dollars?  In order to do this, we
-      analyzed a dataset called "IMDB 5000 Movie Dataset" from data.world.  This 
+      analyzed a dataset called "iMDB 5000 Movie Dataset" from data.world.  This 
       dataset over 5000 movie titles spanning across 100 years and 66 countries, with 28 
       distinct variables, 2399 director names and additional information on the 
       main actors/actresses.</p>
