--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -100,19 +100,15 @@
 
 
 <!--this is code given by tableau-->
+<p>Title Year vs iMDB Score</p>
+<p>Shows public reception to movies over time</p>
 <div class='tableauPlaceholder' id='viz1525033821870' style = "height:600; width: 70%;">>
   <noscript><a href='#'>
     <img alt='Title Year vs. iMDB Score ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Mo&#47;MovieData_25&#47;Sheet2&#47;1_rss.png' style='border: none' /></a>
   </noscript><object class='tableauViz'  style='display:none;'>
     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> 
     <param name='site_root' value='' /><param name='name' value='MovieData_25&#47;Sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Mo&#47;MovieData_25&#47;Sheet2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1525033821870');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  
 
-  <div class="col-sm-12" style = "margin-bottom: 130px;"> 
-      <p> Add more analysis and any visualization you want here</p>
-      <hr>
-      <p>Lorem ipsum...</p>
-    </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
