--- a/templates/predict.html
+++ b/templates/predict.html
@@ -72,9 +72,9 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="introduction.html">INTRODUCTION</a></li>
-          <li><a href="visualization.html">ANALYSIS AND VISUALIZATION</a></li>
-          <li><a href="predict.html">PREDICTION</a></li>
+          <li><a href="{{ url_for('introduction') }}">INTRODUCTION</a></li>
+          <li><a href="{{ url_for('visualization') }}">ANALYSIS AND VISUALIZATION</a></li>
+          <li><a href="{{ url_for('prediction') }}">PREDICTION</a></li>
         </ul>
       </div>
     </div>
