--- a/templates/index.html
+++ b/templates/index.html
@@ -70,13 +70,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">HOME</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">HOME</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="introduction.html">INTRODUCTION</a></li>
-          <li><a href="visualization.html">ANALYSIS AND VISUALIZATION</a></li>
-          <li><a href="predict.html">PREDICTION</a></li>
+          <li><a href="{{ url_for('introduction') }}">INTRODUCTION</a></li>
+          <li><a href="{{ url_for('visualization') }}">ANALYSIS AND VISUALIZATION</a></li>
+          <li><a href="{{ url_for('prediction') }}">PREDICTION</a></li>
         </ul>
       </div>
     </div>
