--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -70,7 +70,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">HOME</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">HOME</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
