--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,8 @@
       margin: auto;
       margin-bottom: 200px;
     }
+
+
   </style>
 </head>
 <body>
@@ -92,7 +94,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan </span>
+  <span>Designed by: Kyra Bresnahan, Khuyen Cao, Fareya Ikram, Yeggie Lee </span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href="https://github.com/hakhuyen1997/Blockbuster-DS3001-Project"> Github </a>
