--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -15,7 +15,6 @@
     body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
-      color: #f5f6f7;
     }
     p{
       color: black;
@@ -88,8 +87,8 @@
 </div>
 
 
-  <div class="col-sm-12" style = "margin-bottom: 130px;">
-    <p> What if <b>you</b> could predict the next big blockbuster?</p>
+  <div class="col-sm-12" style = "margin-right: 30px;">
+    <h2 style = "text-align: center;"> What if <b>you</b> could predict the next big blockbuster?</h2>
       <hr>
       <p>The movie industry is one of the most profitable industries worldwide.  Billions
       of dollars go into the box office yearly.  Individual movies can also make over 
@@ -99,19 +98,21 @@
       dataset over 5000 movie titles spanning across 100 years and 66 countries, with 28 
       distinct variables, 2399 director names and additional information on the 
       main actors/actresses.</p>
+    <p>For more information, click <a href="https://docs.google.com/document/d/1NXEocMoNC3o1fgzx5bedyl4rjzuTWFh32S1hrVNv7vc/edit?usp=sharing">Read Me</a></p>
     </div>
-      <div class="col-sm-12" style = "margin-bottom: 130px;">
-    <p> About the Data set</p>
-      <hr>
-      <p> For this project we looked at iMDB 5000 dataset.</p>
+
+      <div class="col-sm-12" style = "margin-bottom: 100px;">
+        <hr>
+        <h2 style = "text-align: center;"> About the Data set</h2>
+      <p> For this project we looked at <a href="https://data.world/popculture/imdb-5000-movie-dataset">IMGD 5000 Dataset</a></p>
       <p> Below are the missing values per attribute.</p>
 
       <p style="text-align:center;">
-          <img src="missing_value.png" alt="bro" style="width:50%;height:60%;">
+          <img src="https://preview.ibb.co/gPMtw7/missing_value.png" alt="bro" style="width:50%;height:60%;">
       </p>
       <p>Basic correlation</p>
       <p style="text-align:center;">
-          <img src="pearson_heatmap.png" alt="bro" style="width:50%;height:60%;">
+          <img src="https://preview.ibb.co/g9g43n/pearson_heatmap.png" alt="bro" style="width:50%;height:60%;">
       </p>
     </div>
 
@@ -119,7 +120,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan </span>
+  <span>Designed by: Kyra Bresnahan, Khuyen Cao, Fareya Ikram, Yeggie Lee </span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href=https://github.com/hakhuyen1997/Blockbuster-DS3001-Project> Github </a>
