--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -56,6 +56,18 @@
       display: block;
       margin: auto;
       margin-bottom: 100px;
+      margin-top: 100px;
+    }
+
+    img{
+      display: block;
+      margin: auto;
+    }
+
+    .tableauPlaceholder{
+      width: 80%;
+      display: block;
+      margin-bottom: 100px;
     }
   </style>
 </head>
@@ -83,12 +95,17 @@
   </nav>
 
 <div class="jumbotron text-center" style="background-color:#FFCC00; height: 650px;">
-  <h1 style="color: white; font-size: 100px;"><img style = "width: 10%; height: 10%; margin-right: 35px;" src="https://i.pinimg.com/originals/b4/4e/3f/b44e3f303c17a371a020f354137be827.png" alt="logo">Analysis & Visualization</h1>
+  <h1 style="color: white; font-size: 100px;"><img style = "display: inline; width: 10%; height: 10%; margin-right: 35px;" src="https://i.pinimg.com/originals/b4/4e/3f/b44e3f303c17a371a020f354137be827.png" alt="logo">Analysis & Visualization</h1>
   <h3 style="color: white;">Blockbuster - Movie Analysis Project</ >
 </div>
 
-<div class="container">
-</div>
+<p>Correlation matrix</p>
+<img src="https://preview.ibb.co/g8Dj3n/null_heatmap.png" alt="null_heatmap" border="0">
+
+<hr>
+<p>Profit percentage visualization</p>
+<img src="https://preview.ibb.co/hAZP3n/Screen_Shot_2018_05_01_at_1_27_54_AM.png" alt="Screen_Shot_2018_05_01_at_1_27_54_AM" border="0">
+  <hr>
 <p>Top Directors</p>
 <p>Directors with the highest grossing movies</p>
 <iframe src="https://plot.ly/~KhuyenCao/6/.embed"
@@ -96,9 +113,42 @@
         scrolling="no" seamless="seamless"
         frameBorder="0">
 </iframe>
+<hr>
 
+<p>Top Main Actor/Actresses (1)</p>
+<p>Actors/Actresses with the highest grossing movies</p>
+<iframe src="https://plot.ly/~KhuyenCao/14/.embed"
+        height="600" width="100%"
+        scrolling="no" seamless="seamless"
+        frameBorder="0">
+</iframe>
+<hr>
 
+<p>Top Main Actor/Actresses (2)</p>
+<p>Actors/Actresses with the highest grossing movies</p>
+<iframe src="https://plot.ly/~KhuyenCao/10/.embed"
+        height="600" width="100%"
+        scrolling="no" seamless="seamless"
+        frameBorder="0">
+</iframe>
+<hr>
 
+<p>Top Main Actor/Actresses (3)</p>
+<p>Actors/Actresses with the highest grossing movies</p>
+<iframe src="https://plot.ly/~KhuyenCao/12/.embed"
+        height="600" width="100%"
+        scrolling="no" seamless="seamless"
+        frameBorder="0">
+</iframe>
+<hr>
+
+<p>Correlation between different features in relation to gross in foreign movies</p>
+<iframe src="https://plot.ly/~KhuyenCao/4/.embed"
+        height="600" width="100%"
+        scrolling="no" seamless="seamless"
+        frameBorder="0">
+</iframe>
+<hr>
 <!--this is code given by tableau-->
 <p>Title Year vs iMDB Score</p>
 <p>Shows public reception to movies over time</p>
@@ -112,7 +162,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan</span>
+  <span>Designed by: Kyra Bresnahan, Khuyen Cao, Fareya Ikram, Yeggie Lee</span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href=https://github.com/hakhuyen1997/Blockbuster-DS3001-Project> Github </a>
