--- a/templates/predict.html
+++ b/templates/predict.html
@@ -45,10 +45,6 @@
         color: #5BC6A9;
     }
 
-    h1{
-      margin-top: 100px;
-    }
-
     iframe{
       width: 80%;
       display: block;
@@ -79,16 +75,13 @@
     </div>
   </nav>
 
-<div class="jumbotron text-center" style="background-color:#FFCC00; height: 650px;">
-  <h1 style="color: white; font-size: 100px;"><img style = "width: 10%; height: 10%; margin-right: 35px;" src="https://i.pinimg.com/originals/b4/4e/3f/b44e3f303c17a371a020f354137be827.png" alt="logo">Predict your next movie!</h1>
-  <h3 style="color: white;">Blockbuster - Movie Analysis Project</ >
+<div class="jumbotron text-center" style="background-color:#FFCC00;">
+  <h1 style="color: white; font-size: 100px;"><img style = "width: 5%; height: 5%; margin-right: 25px;" src="https://i.pinimg.com/originals/b4/4e/3f/b44e3f303c17a371a020f354137be827.png" alt="logo">Predict your next movie!</h1>
 </div>
 
 <div class="container">
 </div>
 
-  <h2 style = "text-align: center;">Enter the information about the movie you want to predict.</h2>
-  
 
 <div class="container" style="margin-bottom: 130px;">
   <form action="{{ url_for('upload') }}" method=post>
@@ -122,13 +115,13 @@
         <input type="number" name="duration" class="form-control" placeholder="Duration...">
       </div>
     </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button style = "display: block; margin: auto;" type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan</span>
+  <span>Designed by: Kyra Bresnahan, Khuyen Cao, Fareya Ikram, Yeggie Lee</span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href=https://github.com/hakhuyen1997/Blockbuster-DS3001-Project> Github </a>
