--- a/templates/result.html
+++ b/templates/result.html
@@ -46,10 +46,6 @@
         color: #5BC6A9;
     }
 
-    h1{
-      margin-top: 100px;
-    }
-
     iframe{
       width: 80%;
       display: block;
@@ -81,16 +77,15 @@
     </div>
   </nav>
 
-<div class="jumbotron text-center" style="background-color:#FFCC00; height: 650px;">
+<div class="jumbotron text-center" style="background-color:#FFCC00;">
   <h1 style="color: white; font-size: 100px;"><img style = "width: 10%; height: 10%; margin-right: 35px;" src="https://i.pinimg.com/originals/b4/4e/3f/b44e3f303c17a371a020f354137be827.png" alt="logo">RESULT</h1>
-  <h3 style="color: white;">Blockbuster - Movie Analysis Project</ >
 </div>
 
     <div class="col-sm-12" style = "margin-bottom: 130px;">
-      <p> Is your movie a blockbuster? </p>
-      <p>
+      <p> Will your movie gain good profit? </p>
+      <p style = "font-size: 30px;"><b>
       {{answer}}
-      </p>
+      </b></p>
       <hr>
     </div>
 
@@ -98,7 +93,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <span>Designed by: Khuyen Cao, Fareya Ikram, Yeggie Lee, Kyra Bresnahan</span>
+  <span>Designed by: Kyra Bresnahan, Khuyen Cao, Fareya Ikram, Yeggie Lee</span>
   <div class="footer-copyright py-3 text-center">
       © 2018 Copyright:
       <a href="https://github.com/hakhuyen1997/Blockbuster-DS3001-Project"> Github </a>
